src/examples/test-doubles/AbstractClassTest.php.out
./tools/phpunit tests/AbstractClassTest.php
PHPUnit 12.0-gf9a0e9f860 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.21 MB

There was 1 error:

1) AbstractClassTest::testConcreteMethod
Error: Call to undefined method AbstractClassTest::getMockForAbstractClass()

/path/to/tests/AbstractClassTest.php:8

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
